added api for service logs
