# core/app/controllers/uffizzi_core/api/cli/v1/projects/deployments/activity_items_controller.rb
@@ -2,9 +2,9 @@
 
 class UffizziCore::Api::Cli::V1::Projects::Deployments::ActivityItemsController <
   UffizziCore::Api::Cli::V1::Projects::Deployments::ApplicationController
-  # Get the compose file for the project
+  # Get activity items for a deployment
   #
-  # @path [GET] /api/cli/v1/projects/{project_slug}/compose_file
+  # @path [GET] /api/cli/v1/projects/{project_slug}/deployment/{deployment_id}/actiivity_items
   #
   # @parameter project_slug(required,path) [string] The project slug
   # @parameter deployment_d(required,path) [integer] The id of the deployment
